--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^9.3.0"
+    "discord.js": "^9.3.0",
+    "fetch": "^1.1.0",
+    "lodash": "^4.16.4"
   }
 }
