--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^9.3.0",
     "fetch": "^1.1.0",
+    "fs-extra": "^0.30.0",
     "lodash": "^4.16.4"
   }
 }
