--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chance": "^1.0.4",
     "discord.js": "^9.3.0",
     "fetch": "^1.1.0",
     "fs-extra": "^0.30.0",
